--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       </div>
       <div class="story-content">
         <div class="story-image">
-          <img src="images/our-story.svg" alt="Memora Story" class="floating">
+          <img src="images/logo.png" alt="Memora Story" class="floating">
         </div>
         <div class="story-text">
           <p>Memora was born from a deeply personal experience. Our founder, Dr. Elena Chen, witnessed her grandmother's struggle with dementia and the profound impact it had on her family. Despite being surrounded by love and support, her grandmother faced daily challenges with memory loss and maintaining independence.</p>
@@ -124,7 +124,7 @@
       </div>
     </section>
 
-    <section class="impact">
+    <!-- <section class="impact">
       <div class="section-header">
         <h2>Our Impact</h2>
         <div class="underline"></div>
@@ -151,9 +151,9 @@
         <p>Through our innovative approach to dementia care, Memora has made a significant impact on the lives of thousands of individuals and families around the world. Our platform has been recognized by leading healthcare organizations and has been featured in numerous publications for its effectiveness in improving quality of life for people with dementia.</p>
         <p>We continue to expand our reach and refine our technology based on user feedback and emerging research, ensuring that Memora remains at the forefront of dementia care innovation.</p>
       </div>
-    </section>
+    </section> -->
 
-    <section class="partners">
+    <!-- <section class="partners">
       <div class="section-header">
         <h2>Our Partners</h2>
         <div class="underline"></div>
@@ -184,7 +184,7 @@
           <p>Elder Care Innovation Hub</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="cta-section">
       <div class="cta-content">
@@ -201,7 +201,7 @@
   <footer>
     <div class="footer-content">
       <div class="footer-logo">
-        <img src="images/logo.svg" alt="Memora Logo">
+        <img src="images/logo.png" alt="Memora Logo">
         <h3>Memora</h3>
         <p>Preserving Memories, Enhancing Lives</p>
       </div>
@@ -238,7 +238,7 @@
           <button type="submit" class="btn primary">Subscribe</button>
         </form>
         <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.linkedin.com/company/lifewithmemora/posts/?feedView=all" target="_blank"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-twitter"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
