--- a/features.html
+++ b/features.html
@@ -79,7 +79,7 @@
       </div>
       <div class="feature-content">
         <div class="feature-image">
-          <img src="images/memory-feature.svg" alt="Memory Preservation" class="floating">
+          <img src="images\memory.svg" alt="Memory Preservation" class="floating">
         </div>
         <div class="feature-text">
           <h3>Preserving What Matters Most</h3>
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="feature-image">
-          <img src="images/routine-feature.svg" alt="Routine Management" class="floating">
+          <img src="images/undraw_reminders_ll1x.svg" alt="Routine Management" class="floating">
         </div>
       </div>
     </section>
@@ -171,7 +171,7 @@
       </div>
       <div class="feature-content">
         <div class="feature-image">
-          <img src="images/ai-feature.svg" alt="AI Support" class="floating">
+          <img src="images/support.svg" alt="AI Support" class="floating">
         </div>
         <div class="feature-text">
           <h3>Intelligent Assistance</h3>
@@ -251,7 +251,7 @@
           </div>
         </div>
         <div class="feature-image">
-          <img src="images/safety-feature.svg" alt="Safety Features" class="floating">
+          <img src="images/safety.svg" alt="Safety Features" class="floating">
         </div>
       </div>
     </section>
@@ -328,11 +328,11 @@
               <div class="quote"><i class="fas fa-quote-left"></i></div>
               <p>The memory flashbacks feature has been incredible for my father. Seeing photos from his past brings him such joy, and I've noticed he's more engaged after these sessions.</p>
               <div class="testimonial-author">
-                <img src="images/testimonial4.svg" alt="James Wilson">
-                <div>
+                <!-- <img src="images/testimonial4.svg" alt="James Wilson"> -->
+                <!-- <div>
                   <h4>James Wilson</h4>
                   <p>Son of Memora User</p>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -341,11 +341,11 @@
               <div class="quote"><i class="fas fa-quote-left"></i></div>
               <p>As a professional caregiver, I've recommended Memora to many families. The routine management features have made a significant difference in medication adherence and daily structure.</p>
               <div class="testimonial-author">
-                <img src="images/testimonial5.svg" alt="Dr. Lisa Thompson">
-                <div>
+                <!-- <img src="images/testimonial5.svg" alt="Dr. Lisa Thompson"> -->
+                <!-- <div>
                   <h4>Dr. Lisa Thompson</h4>
                   <p>Geriatric Specialist</p>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -354,11 +354,11 @@
               <div class="quote"><i class="fas fa-quote-left"></i></div>
               <p>The safety features give me peace of mind when I can't be with my mother. The location tracking has prevented several wandering incidents, and the emergency alert system is intuitive.</p>
               <div class="testimonial-author">
-                <img src="images/testimonial6.svg" alt="Robert Garcia">
+                <!-- <img src="images/testimonial6.svg" alt="Robert Garcia">
                 <div>
                   <h4>Robert Garcia</h4>
                   <p>Family Caregiver</p>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -440,5 +440,11 @@
   </footer>
 
   <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script>
+    (function() {
+      emailjs.init("UtdCcDhtC3ycbfVFy");
+    })();
+  </script>
 </body>
 </html>
