--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
             </div>
             <div>
               <h3>Our Location</h3>
-              <p>123 Innovation Drive<br>San Francisco, CA 94103<br>United States</p>
+              <p>RV COLLEGE OF ENGINEERING <br>Pattenegere<br>Bengaluru-560062<br>India</p>
             </div>
           </div>
           <div class="info-item">
@@ -102,7 +102,7 @@
             </div>
             <div>
               <h3>Phone</h3>
-              <p>+1 (555) 123-4567</p>
+              <p>+91 96112 47230<br>+91 8904601341</p>
               <p>Monday - Friday: 8am - 6pm PST</p>
             </div>
           </div>
@@ -116,7 +116,7 @@
               <p>support@memoracare.com</p>
             </div>
           </div>
-          <div class="social-media">
+          <!-- <div class="social-media">
             <h3>Connect With Us</h3>
             <div class="social-icons">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -125,7 +125,7 @@
               <a href="#"><i class="fab fa-linkedin-in"></i></a>
               <a href="#"><i class="fab fa-youtube"></i></a>
             </div>
-          </div>
+          </div> -->
         </div>
         <form class="contact-form">
           <div class="form-group">
