More Fixes Done

--- a/team.html
+++ b/team.html
@@ -167,14 +167,14 @@
             <a href="features.html#ai">AI Support</a>
             <a href="features.html#safety">Safety Monitoring</a>
           </div>
-          <div class="footer-column">
+          <!-- <div class="footer-column">
             <h4>Resources</h4>
             <a href="#">Blog</a>
             <a href="#">Support Center</a>
             <a href="#">FAQ</a>
             <a href="#">Privacy Policy</a>
             <a href="#">Terms of Service</a>
-          </div>
+          </div> -->
         </div>
         <div class="footer-newsletter">
           <h4>Stay Updated</h4>
@@ -187,10 +187,15 @@
             <button type="submit" class="btn primary">Subscribe</button>
           </form>
           <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <!-- <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a> -->
+            <a
+              href="https://www.linkedin.com/company/lifewithmemora/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
           </div>
         </div>
       </div>
