--- a/about.html
+++ b/about.html
@@ -1,130 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Memora</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <nav id="navbar">
-      <div class="logo">
-        <img src="images/logo.svg" alt="Memora Logo">
-        <span>Memora</span>
-      </div>
-      <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
-        <a href="features.html">Features</a>
-        <a href="team.html">Team</a>
-        <a href="contact.html">Contact Us</a>
-      </div>
-      <div class="hamburger">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-      </div>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About - Memora</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <nav id="navbar">
+        <div class="logo">
+          <img src="images/logo.svg" alt="Memora Logo" />
+          <span>Memora</span>
+        </div>
+        <div class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html" class="active">About</a>
+          <a href="features.html">Features</a>
+          <a href="team.html">Team</a>
+          <a href="contact.html">Contact Us</a>
+        </div>
+        <div class="hamburger">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+      </nav>
+    </header>
 
-  <main>
-    <section class="page-banner">
-      <div class="banner-content">
-        <h1>About Memora</h1>
-        <p>Our mission, vision, and the story behind our innovative platform</p>
-      </div>
-      <div class="banner-overlay"></div>
-    </section>
+    <main>
+      <section class="page-banner">
+        <div class="banner-content">
+          <h1>About Memora</h1>
+          <p>
+            Our mission, vision, and the story behind our innovative platform
+          </p>
+        </div>
+        <div class="banner-overlay"></div>
+      </section>
 
-    <section class="our-story">
-      <div class="section-header">
-        <h2>Our Story</h2>
-        <div class="underline"></div>
-      </div>
-      <div class="story-content">
-        <div class="story-image">
-          <img src="images/logo.png" alt="Memora Story" class="floating">
+      <section class="our-story">
+        <div class="section-header">
+          <h2>Our Story</h2>
+          <div class="underline"></div>
         </div>
-        <div class="story-text">
-          <p>Memora was born from a deeply personal experience. Our founder, Dr. Elena Chen, witnessed her grandmother's struggle with dementia and the profound impact it had on her family. Despite being surrounded by love and support, her grandmother faced daily challenges with memory loss and maintaining independence.</p>
-          <p>After extensive research and collaboration with healthcare professionals, Dr. Chen assembled a team of experts in neuroscience, technology, and caregiving to create a comprehensive solution that addresses the multifaceted needs of individuals with dementia.</p>
-          <p>Since our founding in 2023, Memora has grown from a small startup to a leading innovator in dementia care technology, helping thousands of families navigate the challenges of dementia with dignity and compassion.</p>
+        <div class="story-content">
+          <div class="story-image">
+            <img src="images/logo.png" alt="Memora Story" class="floating" />
+          </div>
+          <div class="story-text">
+            <p>
+              Memora was born from a deeply personal experience. Our founder,
+              Dr. Elena Chen, witnessed her grandmother's struggle with dementia
+              and the profound impact it had on her family. Despite being
+              surrounded by love and support, her grandmother faced daily
+              challenges with memory loss and maintaining independence.
+            </p>
+            <p>
+              After extensive research and collaboration with healthcare
+              professionals, Dr. Chen assembled a team of experts in
+              neuroscience, technology, and caregiving to create a comprehensive
+              solution that addresses the multifaceted needs of individuals with
+              dementia.
+            </p>
+            <p>
+              Since our founding in 2023, Memora has grown from a small startup
+              to a leading innovator in dementia care technology, helping
+              thousands of families navigate the challenges of dementia with
+              dignity and compassion.
+            </p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="mission-vision">
-      <div class="mission">
-        <div class="mission-icon">
-          <i class="fas fa-bullseye"></i>
+      <section class="mission-vision">
+        <div class="mission">
+          <div class="mission-icon">
+            <i class="fas fa-bullseye"></i>
+          </div>
+          <h3>Our Mission</h3>
+          <p>
+            To enhance the quality of life for individuals with dementia by
+            preserving memories, supporting emotional well-being, and promoting
+            independence through innovative technology.
+          </p>
         </div>
-        <h3>Our Mission</h3>
-        <p>To enhance the quality of life for individuals with dementia by preserving memories, supporting emotional well-being, and promoting independence through innovative technology.</p>
-      </div>
-      <div class="vision">
-        <div class="vision-icon">
-          <i class="fas fa-eye"></i>
+        <div class="vision">
+          <div class="vision-icon">
+            <i class="fas fa-eye"></i>
+          </div>
+          <h3>Our Vision</h3>
+          <p>
+            A world where individuals with dementia can live with dignity,
+            purpose, and joy, supported by technology that adapts to their
+            unique needs and preserves their personal legacy.
+          </p>
         </div>
-        <h3>Our Vision</h3>
-        <p>A world where individuals with dementia can live with dignity, purpose, and joy, supported by technology that adapts to their unique needs and preserves their personal legacy.</p>
-      </div>
-    </section>
+      </section>
 
-    <section class="values">
-      <div class="section-header">
-        <h2>Our Core Values</h2>
-        <div class="underline"></div>
-      </div>
-      <div class="values-grid">
-        <div class="value-card">
-          <div class="value-icon">
-            <i class="fas fa-heart"></i>
-          </div>
-          <h3>Compassion</h3>
-          <p>We approach every aspect of our work with empathy and understanding for the unique challenges faced by individuals with dementia and their caregivers.</p>
+      <section class="values">
+        <div class="section-header">
+          <h2>Our Core Values</h2>
+          <div class="underline"></div>
         </div>
-        <div class="value-card">
-          <div class="value-icon">
-            <i class="fas fa-lightbulb"></i>
+        <div class="values-grid">
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-heart"></i>
+            </div>
+            <h3>Compassion</h3>
+            <p>
+              We approach every aspect of our work with empathy and
+              understanding for the unique challenges faced by individuals with
+              dementia and their caregivers.
+            </p>
           </div>
-          <h3>Innovation</h3>
-          <p>We continuously push the boundaries of technology to create solutions that meaningfully address the complex needs of dementia care.</p>
-        </div>
-        <div class="value-card">
-          <div class="value-icon">
-            <i class="fas fa-users"></i>
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-lightbulb"></i>
+            </div>
+            <h3>Innovation</h3>
+            <p>
+              We continuously push the boundaries of technology to create
+              solutions that meaningfully address the complex needs of dementia
+              care.
+            </p>
           </div>
-          <h3>Inclusivity</h3>
-          <p>We design our platform to be accessible and beneficial for people of all backgrounds, abilities, and stages of dementia.</p>
-        </div>
-        <div class="value-card">
-          <div class="value-icon">
-            <i class="fas fa-shield-alt"></i>
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-users"></i>
+            </div>
+            <h3>Inclusivity</h3>
+            <p>
+              We design our platform to be accessible and beneficial for people
+              of all backgrounds, abilities, and stages of dementia.
+            </p>
           </div>
-          <h3>Integrity</h3>
-          <p>We uphold the highest standards of privacy, security, and ethical practice in all our operations and interactions.</p>
-        </div>
-        <div class="value-card">
-          <div class="value-icon">
-            <i class="fas fa-hands-helping"></i>
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-shield-alt"></i>
+            </div>
+            <h3>Integrity</h3>
+            <p>
+              We uphold the highest standards of privacy, security, and ethical
+              practice in all our operations and interactions.
+            </p>
           </div>
-          <h3>Empowerment</h3>
-          <p>We strive to give individuals with dementia greater control over their lives and provide caregivers with tools that reduce burden and enhance care.</p>
-        </div>
-        <div class="value-card">
-          <div class="value-icon">
-            <i class="fas fa-microscope"></i>
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-hands-helping"></i>
+            </div>
+            <h3>Empowerment</h3>
+            <p>
+              We strive to give individuals with dementia greater control over
+              their lives and provide caregivers with tools that reduce burden
+              and enhance care.
+            </p>
           </div>
-          <h3>Evidence-Based</h3>
-          <p>We ground our approach in scientific research and collaborate with experts to ensure our platform delivers meaningful outcomes.</p>
+          <div class="value-card">
+            <div class="value-icon">
+              <i class="fas fa-microscope"></i>
+            </div>
+            <h3>Evidence-Based</h3>
+            <p>
+              We ground our approach in scientific research and collaborate with
+              experts to ensure our platform delivers meaningful outcomes.
+            </p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- <section class="impact">
+      <!-- <section class="impact">
       <div class="section-header">
         <h2>Our Impact</h2>
         <div class="underline"></div>
@@ -153,7 +207,7 @@
       </div>
     </section> -->
 
-    <!-- <section class="partners">
+      <!-- <section class="partners">
       <div class="section-header">
         <h2>Our Partners</h2>
         <div class="underline"></div>
@@ -186,70 +240,80 @@
       </div>
     </section> -->
 
-    <section class="cta-section">
-      <div class="cta-content">
-        <h2>Join Our Mission</h2>
-        <p>Be part of our journey to transform dementia care through innovative technology.</p>
-        <a href="contact.html" class="btn primary">Contact Us Today</a>
-      </div>
-      <div class="cta-particles">
-        <div class="particles"></div>
-      </div>
-    </section>
-  </main>
+      <section class="cta-section">
+        <div class="cta-content">
+          <h2>Join Our Mission</h2>
+          <p>
+            Be part of our journey to transform dementia care through innovative
+            technology.
+          </p>
+          <a href="contact.html" class="btn primary">Contact Us Today</a>
+        </div>
+        <div class="cta-particles">
+          <div class="particles"></div>
+        </div>
+      </section>
+    </main>
 
-  <footer>
-    <div class="footer-content">
-      <div class="footer-logo">
-        <img src="images/logo.png" alt="Memora Logo">
-        <h3>Memora</h3>
-        <p>Preserving Memories, Enhancing Lives</p>
-      </div>
-      <div class="footer-links">
-        <div class="footer-column">
-          <h4>Navigation</h4>
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
-          <a href="features.html">Features</a>
-          <a href="team.html">Team</a>
-          <a href="contact.html">Contact Us</a>
+    <footer>
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="images/logo.png" alt="Memora Logo" />
+          <h3>Memora</h3>
+          <p>Preserving Memories, Enhancing Lives</p>
         </div>
-        <div class="footer-column">
-          <h4>Features</h4>
-          <a href="features.html#memory">Memory Preservation</a>
-          <a href="features.html#reminders">Smart Reminders</a>
-          <a href="features.html#ai">AI Support</a>
-          <a href="features.html#safety">Safety Monitoring</a>
-        </div>
-        <div class="footer-column">
+        <div class="footer-links">
+          <div class="footer-column">
+            <h4>Navigation</h4>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="features.html">Features</a>
+            <a href="team.html">Team</a>
+            <a href="contact.html">Contact Us</a>
+          </div>
+          <div class="footer-column">
+            <h4>Features</h4>
+            <a href="features.html#memory">Memory Preservation</a>
+            <a href="features.html#reminders">Smart Reminders</a>
+            <a href="features.html#ai">AI Support</a>
+            <a href="features.html#safety">Safety Monitoring</a>
+          </div>
+          <!-- <div class="footer-column">
           <h4>Resources</h4>
           <a href="#">Blog</a>
           <a href="#">Support Center</a>
           <a href="#">FAQ</a>
           <a href="#">Privacy Policy</a>
           <a href="#">Terms of Service</a>
+        </div> -->
+        </div>
+        <div class="footer-newsletter">
+          <h4>Stay Updated</h4>
+          <p>
+            Subscribe to our newsletter for the latest updates and resources.
+          </p>
+          <form class="newsletter-form">
+            <input type="email" placeholder="Your email address" />
+            <button type="submit" class="btn primary">Subscribe</button>
+          </form>
+          <div class="social-icons">
+            <!-- <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a> -->
+            <a
+              href="https://www.linkedin.com/company/lifewithmemora/"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+          </div>
         </div>
       </div>
-      <div class="footer-newsletter">
-        <h4>Stay Updated</h4>
-        <p>Subscribe to our newsletter for the latest updates and resources.</p>
-        <form class="newsletter-form">
-          <input type="email" placeholder="Your email address">
-          <button type="submit" class="btn primary">Subscribe</button>
-        </form>
-        <div class="social-icons">
-          <a href="https://www.linkedin.com/company/lifewithmemora/posts/?feedView=all" target="_blank"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Memora. All rights reserved.</p>
       </div>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; 2025 Memora. All rights reserved.</p>
-    </div>
-  </footer>
+    </footer>
 
-  <script src="js/main.js"></script>
-</body>
+    <script src="js/main.js"></script>
+  </body>
 </html>
