--- a/team.html
+++ b/team.html
@@ -72,10 +72,11 @@
         <div class="team-grid">
           <div class="team-member">
             <div class="member-image">
-              <img src="images/team1.svg" alt="Yash Saraogi" />
+              <img src="images/Yash.png" alt="Yash Saraogi" />
               <div class="social-links">
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/yashsaraogi05/"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
               </div>
             </div>
             <div class="member-info">
@@ -93,7 +94,6 @@
               <img src="images/team2.svg" alt="Tallam Sri Sai Subramanyam" />
               <div class="social-links">
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
               </div>
             </div>
             <div class="member-info">
@@ -112,7 +112,6 @@
               <img src="images/team3.svg" alt="Yadamreddy Navaneeth" />
               <div class="social-links">
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
               </div>
             </div>
             <div class="member-info">
