--- a/team.html
+++ b/team.html
@@ -93,7 +93,9 @@
             <div class="member-image">
               <img src="images/team2.svg" alt="Tallam Sri Sai Subramanyam" />
               <div class="social-links">
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/tallamsrisai/"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
               </div>
             </div>
             <div class="member-info">
