--- a/team.html
+++ b/team.html
@@ -91,7 +91,7 @@
           </div>
           <div class="team-member">
             <div class="member-image">
-              <img src="images/team2.svg" alt="Tallam Sri Sai Subramanyam" />
+              <img src="images/Sai.jpeg" alt="Tallam Sri Sai Subramanyam" />
               <div class="social-links">
                 <a href="https://www.linkedin.com/in/tallamsrisai/"
                   ><i class="fab fa-linkedin-in"></i
@@ -111,9 +111,12 @@
           </div>
           <div class="team-member">
             <div class="member-image">
-              <img src="images/team3.svg" alt="Yadamreddy Navaneeth" />
+              <img src="images/Naveneeth.jpeg" alt="Yadamreddy Navaneeth" />
               <div class="social-links">
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a
+                  href="https://www.linkedin.com/in/navaneeth-yadamreddy-452772255/"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
               </div>
             </div>
             <div class="member-info">
