Image fixes and Misc Fixes

--- a/team.html
+++ b/team.html
@@ -100,7 +100,7 @@
             </div>
             <div class="member-info">
               <h3>Tallam Sri Sai Subramanyam</h3>
-              <p class="member-title">Chief Marketing Officer</p>
+              <p class="member-title">Co-Founder & CMO</p>
               <p class="member-bio">
                 Marketing strategist with expertise in healthcare
                 communications. Tallam ensures Memora's message reaches
@@ -121,7 +121,7 @@
             </div>
             <div class="member-info">
               <h3>Yadamreddy Navaneeth</h3>
-              <p class="member-title">Chief Technology Officer</p>
+              <p class="member-title">Co-Founder & CTO</p>
               <p class="member-bio">
                 Tech innovator with a background in AI and machine learning.
                 Navaneeth leads the development of Memora's adaptive algorithms
