--- a/team.html
+++ b/team.html
@@ -91,7 +91,7 @@
           </div>
           <div class="team-member">
             <div class="member-image">
-              <img src="images/Sai.jpeg" alt="Tallam Sri Sai Subramanyam" />
+              <img src="images/Sai.png" alt="Tallam Sri Sai Subramanyam" />
               <div class="social-links">
                 <a href="https://www.linkedin.com/in/tallamsrisai/"
                   ><i class="fab fa-linkedin-in"></i
