--- a/contact.html
+++ b/contact.html
@@ -416,7 +416,7 @@
           <a href="#">Support Center</a>
           <a href="#">FAQ</a>
           <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Service</a>
+          <a href="#">Terms of Services</a>
         </div> -->
         </div>
         <div class="footer-newsletter">
